# Chip8Emulator

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.cpp  chip8.h  main.cpp
